# ai-cyan

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  rust-toolchain.toml
assets/: index-Cmm9lN1I.js  index-Cmm9lN1I.js.map  index-DzbWsYNm.js  index-DzbWsYNm.js.map  main-6yxoHRec.css  main-9K6TwRnF.js  main-9K6TwRnF.js.map  main-BIQoFzb-.js  main-BIQoFzb-.js.map  main-DgbBE5Un.css
crates/cyan/: Cargo.toml  state.rs
crates/cyan-ffi/: Cargo.toml
crates/cyan-internal/: Cargo.toml
crates/cyan-internal/benches/: delta_benchmarks.rs
crates/cyan-internal/src/: lib.rs
crates/cyan-internal/src/auth/: jwt.rs  mod.rs
crates/cyan-internal/src/crdt/: delta.rs  rope.rs  store.rs
crates/cyan-internal/src/delta/: mod.rs  tests.rs
crates/cyan-internal/src/domain/: profile.rs  skill.rs  user.rs
crates/cyan-internal/src/ops/: mod.rs
crates/cyan-internal/src/profile/: mod.rs
crates/cyan-internal/src/storage/: fs.rs
crates/cyan-internal/src/store/: mod.rs
crates/cyan-internal/tests/: auth_tests.rs
crates/cyan-wasm/: Cargo.toml
crates/cyan-wasm/src/: lib.rs
crates/cyan-wasm/src/sync/: mod.rs
crates/cyan/src/: lib.rs  main.rs  state.rs
crates/cyan/src/api/: auth.rs  jobs.rs  mod.rs  profile.rs  skills.rs
crates/cyan/src/api/v1/: mod.rs
crates/cyan/src/api/v2/: mod.rs
crates/cyan/src/config/: mod.rs
crates/cyan/src/middleware/: auth.rs
crates/cyan/src/models/: job.rs  mod.rs  user.rs
crates/cyan/src/services/: auth.rs  mod.rs
crates/cyan/tests/: .env.test  api_tests.rs
crates/cyan/tests/helpers/: mod.rs
cyan-js/: index.html  package.json  pnpm-lock.yaml  rollup.config.mjs  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
cyan-js/.github/workflows/: deploy.yml
cyan-js/public/: 404.html
cyan-js/src/: index.html  index.ts  main.tsx  router.tsx
cyan-js/src/components/: MouseFollower.tsx  Navbar.tsx  ThemeToggle.tsx
cyan-js/src/components/common/: VerificationBadge.tsx
cyan-js/src/components/skills/: VerificationFlow.tsx  VerifiedSkillCard.tsx
cyan-js/src/components/skills/SkillReceipt/: Verification.tsx  index.tsx
cyan-js/src/components/skills/steps/: SkillDeclaration.tsx
cyan-js/src/components/ui/: Input.tsx  Select.tsx  TagInput.tsx  Textarea.tsx
cyan-js/src/contexts/: ThemeContext.tsx
cyan-js/src/mocks/: jobs.ts
cyan-js/src/pages/: Features.tsx  Home.tsx  JobDetail.tsx  Jobs.tsx  Login.tsx  PostJob.tsx  Pricing.tsx  Profile.tsx  SignUp.tsx  UserOverview.tsx
cyan-js/src/styles/: globals.css
cyan-js/src/types/: cyan-wasm.d.ts  job.ts  skill.ts  user.ts
cyan-js/tests/: index.test.ts
docs/: api.md  特性.md  需求文档.md  项目工程结构.md  项目计划表.md
