[package]
name = "cyan-internal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full", "macros"] }
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std", "password-hash"] }
time = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }