[package]
name = "cyan-internal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "macros", "fs"] }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = "1.0"
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }