[package]
name = "cyan-internal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full", "fs"] }
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "delta_benchmarks"
harness = false