[package]
name = "cyan"
version = "0.1.0"
edition = "2021"

[dependencies]
cyan-internal = { path = "../cyan-internal" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }